kubernetes/observability/alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: observability
spec:
  type: ClusterIP
  ports:
    - { name: http, port: 9093, targetPort: 9093 }
  selector:
    app: alertmanager
